# OpenGL-template

./: CMakeLists.txt  Camera.cpp  Camera.h  README.md  main.cpp  object.cpp  object.h  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
